# ratgames

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
assets/fonts/: DejaVuSansMono.LICENSE
examples/: arrow_nav.rs  high_score.rs  high_scores.json  level_complete.rs  marquee.json  marquee.rs  marquee.toml  math_game.rs  room_scroll.rs  text_input.rs  text_wave.rs
examples/math_game/: banner.rs  main.rs  quiz.rs
mathgame-app/: Cargo.toml
mathgame-app/src/: lib.rs  main.rs  scores.rs  screens.rs  shadow_banner.rs
mathgame-app/src/config/: copy.json  defaults.json  economy.json  engine.json  layout.json  mod.rs  style.json
mathgame-app/src/config/levels/: level_0.json  level_1.json  level_10.json  level_11.json  level_2.json  level_3.json  level_4.json  level_5.json  level_6.json  level_7.json  level_8.json  level_9.json
mathgame-core/: Cargo.toml
mathgame-core/src/: answer_evaluation.rs  curriculum.rs  lib.rs  mastery.rs  math_core.rs  problem_generation.rs  rng.rs
mazegame-app/: Cargo.toml
mazegame-app/src/: lib.rs  main.rs  scene.rs  screens.rs
mazegame-app/src/config/: defaults.json  mod.rs
mazegame-core/: Cargo.toml
mazegame-core/src/: game.rs  lib.rs  maze.rs  rng.rs
mazegame-web/: Cargo.toml
mazegame-web/src/: lib.rs
src/: color.rs  config.rs  copy.rs  font.rs  game.rs  geometry.rs  glyph.rs  input.rs  lib.rs  main.rs  marquee.rs  overlay.rs  placard.rs  present.rs  quiz.rs  scene.rs  sprite.rs  surface.rs  text.rs  theme.rs  tiles.rs
src/config/: defaults.json  defaults.rs  device.rs  font.rs  layout.rs  levels.rs  mod.rs  quiz.rs  tests.rs
src/effects/: mod.rs  wave.rs
src/host/: minifb.rs  mod.rs  wasm.rs
src/session/: attract.rs  challenge_screen.rs  choice_screen.rs  continue_prompt.rs  continues.rs  game_run.rs  high_score_board.rs  high_score_layout.rs  high_score_store.rs  high_scores.rs  level_goal.rs  mod.rs  player.rs  progress.rs  prompt_screen.rs  rank.rs  run.rs  scoring.rs  screen.rs  text_entry_screen.rs  timed_card.rs
src/ui/: answer_mode.rs  banner_column.rs  blink.rs  choice_list.rs  countdown.rs  event.rs  feedback_beat.rs  flash.rs  label.rs  layout.rs  menu.rs  meter_bar.rs  mod.rs  panel.rs  paragraph.rs  seconds_readout.rs  shadow_banner.rs  timed_gauge.rs  view.rs
tests/: compositor_frames.rs  quiz_frames.rs
web/: README.md  build.mjs  index.html  package-lock.json  package.json  serve.mjs  tsconfig.json
web/src/: main.ts
web/styles/: _base.scss  _canvas.scss  _error.scss  _tokens.scss  main.scss
wordgame-app/: Cargo.toml
wordgame-app/src/: lib.rs  main.rs  scores.rs  screens.rs
wordgame-app/src/config/: copy.json  economy.json  layout.json  mod.rs  style.json  words.json
wordgame-app/src/config/levels/: level_0.json  level_1.json  level_2.json  level_3.json  level_4.json  level_5.json  level_6.json  level_7.json
wordgame-core/: Cargo.toml
wordgame-core/src/: generation.rs  lib.rs  puzzle.rs  rng.rs  word_list.rs
