[package]
name = "ratgames"
version = "0.1.0"
edition = "2024"

[dependencies]
# Dead-simple window + raw u32 framebuffer. No wgpu, no event-loop boilerplate.
minifb = "0.27"
# 8x8 bitmap glyphs (same font family tui-big-text uses); `legacy` is a plain
# [[u8; 8]; 128] ASCII table — no trait imports, no Option juggling.
font8x8 = "0.3"
# Typed library errors (no `Box<dyn Error>` in the crate surface).
thiserror = "2"
fontdue = "0.9.3"
fontdb = "0.23.0"
anyhow = "1.0.103"
# Config (de)serialization: serde derives + a human-editable TOML format.
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[profile.release]
opt-level = 3
