[workspace]
members = ["mathgame-core", "mathgame-app"]
resolver = "2"

[package]
name = "ratgames"
version = "0.1.0"
edition = "2024"

[dependencies]
# 8x8 bitmap glyphs (same font family tui-big-text uses); `legacy` is a plain
# [[u8; 8]; 128] ASCII table — no trait imports, no Option juggling.
font8x8 = "0.3"
# Typed library errors (no `Box<dyn Error>` in the crate surface).
thiserror = "2"
fontdue = "0.9.3"
fontdb = "0.23.0"
# Config (de)serialization: serde derives + human-editable TOML and JSON.
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_json = "1"
# Native window host backend, behind the `minifb` feature. The core stays
# windowing-agnostic (it only produces `Vec<u32>` frames); the minifb backend
# (`ratgames::host::minifb`) is an optional, opt-in adapter, so a future WASM
# host is likewise additive with no core change.
minifb = { version = "0.27", optional = true }

[dev-dependencies]
# Ergonomic error handling in the example binaries.
anyhow = "1.0.103"

[features]
# Optional native window backend: `ratgames::host::minifb::MinifbHost`. Off by
# default so `ratgames` builds windowing-agnostic.
minifb = ["dep:minifb"]

# The runnable examples host through the minifb backend, so they require its
# feature: `cargo run --example marquee --features minifb`.
[[example]]
name = "marquee"
required-features = ["minifb"]

[[example]]
name = "math_game"
required-features = ["minifb"]

[profile.release]
opt-level = 3
